Term Sources now include location
